# tradingbotssd

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-021789dabff45b6c7530b3aa7baf8345abcc4fec5ba5c1115774e756176db91a.json  query-0d579ca265ed89c6d112851ff8d70587c293ded987acfed9de573a00bf5f2248.json  query-10bb211ad08a3f81953c2400f8c85faa81bb0d88942e888e3dc5164a705d3cbb.json  query-8d0edbfb812e6388dc6e5701e9958112372fbd57119b55bbf21b875c4a6b1dad.json  query-96d89a6f377dcdf930c344d4afcff27c52174954540aecec3532635529ea05b8.json  query-9d58c3927d5599ab2dcfe9687b684dc4df028ad1543096aa47c089bf5028f374.json  query-f294d5766bda0954438b59778f4e8701df1f852a874d1559d522d2e78e4b9e3d.json
config/: strategies.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  lib.rs
crates/api/src/routes/: api.rs  health.rs  mod.rs  static_files.rs  ws.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  exchange.rs  lib.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: executor.rs  lib.rs  lifecycle.rs
crates/engine/src/binance/: mod.rs  rest.rs  stream.rs
crates/paper/: Cargo.toml
crates/paper/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  manager.rs
crates/risk/tests/: proptest_risk.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: config.rs  lib.rs  registry.rs
crates/strategy/src/indicators/: macd.rs  mod.rs  rsi.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: commands.rs  lib.rs
deploy/: README.md  clawbot.service
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/dist-placeholder/: index.html
frontend/src/: App.vue  main.ts
frontend/src/views/: Login.vue  Operations.vue  Overview.vue  Performance.vue  StrategyConfig.vue
migrations/: 0001_initial.sql
openspec/changes/archive/2026-02-19-tradingbot-sdd/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-19-tradingbot-sdd/specs/cicd-pipeline/: spec.md
openspec/changes/archive/2026-02-19-tradingbot-sdd/specs/paper-trading/: spec.md
openspec/changes/archive/2026-02-19-tradingbot-sdd/specs/telegram-controller/: spec.md
openspec/changes/archive/2026-02-19-tradingbot-sdd/specs/trading-engine/: spec.md
openspec/changes/archive/2026-02-19-tradingbot-sdd/specs/web-dashboard/: spec.md
openspec/specs/dashboard-api/: spec.md
openspec/specs/risk-manager/: spec.md
openspec/specs/strategy-layer/: spec.md
