[workspace]
members = [
    "crates/common",
    "crates/engine",
    "crates/strategy",
    "crates/risk",
    "crates/telegram",
    "crates/api",
    "crates/paper",
    "bin/clawbot",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ClawBot"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment / config
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }

# HTTP / REST
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
futures-util = "0.3"

# Telegram
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Crypto (HMAC-SHA256 for Binance signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Embed static files
rust-embed = "8"

# MIME type detection
mime_guess = "2"

# Property testing
proptest = "1"

# Workspace crates
common    = { path = "crates/common" }
engine    = { path = "crates/engine" }
strategy  = { path = "crates/strategy" }
risk      = { path = "crates/risk" }
telegram-ctrl = { path = "crates/telegram" }
api       = { path = "crates/api" }
paper     = { path = "crates/paper" }
