[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
common      = { workspace = true }
tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
rust-embed  = { workspace = true }
mime_guess  = { workspace = true }
