[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
common           = { workspace = true }
tokio            = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
sqlx             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util     = { workspace = true }
url              = { workspace = true }
reqwest          = { workspace = true }
hmac             = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
