[package]
name = "paper"
version.workspace = true
edition.workspace = true

[dependencies]
common    = { workspace = true }
tokio     = { workspace = true }
async-trait = { workspace = true }
tracing   = { workspace = true }
chrono    = { workspace = true }
uuid      = { workspace = true }
sqlx      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
