[package]
name = "strategy"
version.workspace = true
edition.workspace = true

[dependencies]
common    = { workspace = true }
tokio     = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
